[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Interact/Dog.gd" type="Script" id=1]
[ext_resource path="res://GFX/_Cachorro_.png" type="Texture" id=2]
[ext_resource path="res://SFX/Latido.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.009, 12.1814 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50.0269, 33.2103 )

[node name="Dog" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6.50897, 19.0262 )
shape = SubResource( 1 )

[node name="Detect" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0

[node name="SpawnPhoto" type="Position2D" parent="."]
position = Vector2( -36.088, 57.5459 )

[connection signal="body_entered" from="Detect" to="." method="_on_Detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_Detect_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
